static/ticker/ticker.css
html, body {
	margin: 0;
	padding: 0;
	font-size: 20px;
	font-family: sans-serif;
}
.main {
	margin: 0 0.5em 0 0.5em;
}

.topline {
	position: relative;
	margin: 0.3em 0 0.5em 0;
}


h1 {
	margin: 0;
	padding: 0;
	font-size: inherit;
	font-weight: bold;
	font-size: 150%;
}
.last_update {
	position: absolute;
	right: 0;
	top: 0;
}
.note {
	margin-top: 1em;
}

table.court {
	margin: 0 auto;
	border-collapse: collapse;
	width: 100%;
	background: #f5f5ff;
}
table.court + table.court {
	margin-top: 0.4em;
}

.team0 {
	background: #f0f0f0;
}
.court_players.team0 {
	padding-bottom: 0.3em;
}
.court_players.team1 {
	padding-top: 0.3em;
}
.team1 {
	background: #e0e0e0;
}
.court_num {
	text-align: right;
	padding: 0 0.5em 0 0.1em;
	width: 1em;
}
.court_players {
	padding-left: 0.6em;
	white-space: pre-wrap;
}
.court_score {
	width: 1.3em;
	font-size: 40px;
	border-left: 0.1vmin solid #ddd;
	text-align: center;
}
.court_event, .court_event_div {
	width: 2em;
	max-width: 2em;
	font-size: 20px;
}
.court_event>div {
	width: 100%;
	height: 100%;
	vertical-align: middle;
	display:flex;
	justify-content:center;
	align-items:center;
}
.court_event>div>span {
	white-space: pre;
	display: block;
	transform-origin: center;
	transform: rotate(-90deg);
}

.error {
	color: red;
}

